--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -1,1 +1,12 @@
-<p>signup works!</p>
+<section class="signup-form">
+  <form fxLayout="column" fxLayoutAlign="center center">
+    <mat-form-field>
+      <mat-label>Votre email</mat-label>
+      <input type="email" matInput />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Votre mot de passe</mat-label>
+      <input type="password" matInput />
+    </mat-form-field>
+  </form>
+</section>
