feat: button submit

--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -8,5 +8,6 @@
       <mat-label>Votre mot de passe</mat-label>
       <input type="password" matInput />
     </mat-form-field>
+    <button type="submit" mat-raised-button color="primary">Connexion</button>
   </form>
 </section>
