--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -1,12 +1,12 @@
 <section class="signup-form">
-  <form fxLayout="column" fxLayoutAlign="center center">
+  <form fxLayout="column" (ngSubmit)="onSubmit(f)" fxLayoutAlign="center center" #f="ngForm">
     <mat-form-field>
       <mat-label>Votre email</mat-label>
-      <input type="email" matInput />
+      <input type="email" matInput ngModel name="email" />
     </mat-form-field>
     <mat-form-field>
       <mat-label>Votre mot de passe</mat-label>
-      <input type="password" matInput />
+      <input type="password" matInput ngModel name="password" />
     </mat-form-field>
     <button type="submit" mat-raised-button color="primary">Connexion</button>
   </form>
