feat: add checkBox

--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -39,7 +39,7 @@
     <mat-form-field>
       <mat-label>choisir une date</mat-label>
       <input matInput [matDatepicker]="picker"
-       [max]="maxDate"/>
+       [max]="maxDate" ngModel name="date" required=""/>
       <mat-hint>JJ/MM/AAAA</mat-hint>
       <mat-datepicker-toggle
         matIconSuffix
@@ -47,7 +47,7 @@
       ></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
-
+    <mat-checkbox class="example-margin" ngModel name="Accepter" color="primary" required="">Accepter les termes et conditions</mat-checkbox>
     <button type="submit" mat-raised-button color="primary">Connexion</button>
   </form>
 </section>
