--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -6,6 +6,9 @@
     #f="ngForm"
     fxLayoutGap="10px"
   >
+  <div class="logo">
+    <img src="../../../../assets/images/_5931ed31-8c65-4665-8a1b-47acb591ef15.jpg" alt="">
+  </div>
     <mat-form-field>
       <mat-label>Votre email</mat-label>
       <input
