fix: clear cache

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container>
+<!-- <mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
     <p>I'm the sidenav!</p>
   </mat-sidenav>
@@ -18,8 +18,8 @@
         </ul>
       </div>
     </mat-toolbar>
-    <main>
+    <main> -->
       <router-outlet></router-outlet>
-    </main>
+    <!-- </main>
   </mat-sidenav-content>
-</mat-sidenav-container>
+</mat-sidenav-container> -->
