--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -7,7 +7,7 @@
     fxLayoutGap="10px"
   >
   <div class="logo">
-    <img src="/src/assets/images/_5931ed31-8c65-4665-8a1b-47acb591ef15.jpg" alt="logo-auth">
+    <img src="/assets/images/logo_.jpg" alt="logo-auth">
   </div>
     <mat-form-field>
       <mat-label>Votre email</mat-label>
